<resources>
    <string name="app_name">Diet Management</string>
    <string name="btnProfile">Profile</string>
    <string name="btnGoal">Goal</string>
    <string name="btnMenu">Menu</string>
    <string name="btnHealth">Health</string>
    <string name="TvHint">Name</string>
    <string name="TvHint2">Email</string>
    <string name="btnName">Name</string>
    <string name="btnEmail">Email</string>
    <string name="Name">Name</string>
    <string name="Age">Age</string>
    <string name="Gender">Gender</string>
    <string name="Goal">Goal</string>
    <string name="Height">Height</string>
    <string name="Weight">Weight</string>
    <string name="MyFood">MyFood</string>
    <string name="caption">Who Are You?</string>
    <string name="who">I am</string>
    <string name="body">My body fat</string>
    <string name="weight">Weight Goal</string>
    <string name="wgd">Weight Goal : date</string>
    <string name="calory">Calory Goal</string>
    <string name="Na">Name</string>
    <string name="Em">Email</string>
    <string name="InputName">xxx</string>
    <string name="InputEmail">xxx</string>
    <string name="heading">Show My Menu</string>
    <string name="hd">How Healthy</string>
</resources>