<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtMyfood"
        android:layout_width="318dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/MyFood"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098" />

    <TextView
        android:id="@+id/lblWho"
        android:layout_width="140dp"
        android:layout_height="32dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="104dp"
        android:text="@string/who"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMyfood" />

    <TextView
        android:id="@+id/lblBody"
        android:layout_width="120dp"
        android:layout_height="31dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="40dp"
        android:text="@string/body"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblWho" />

    <TextView
        android:id="@+id/lblW"
        android:layout_width="120dp"
        android:layout_height="31dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="44dp"
        android:text="@string/weight"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblBody" />

    <TextView
        android:id="@+id/lblwgd"
        android:layout_width="120dp"
        android:layout_height="31dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="40dp"
        android:text="@string/wgd"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblW" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="120dp"
        android:layout_height="31dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="48dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblwgd" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="113dp"
        android:layout_height="52dp"
        android:layout_marginEnd="48dp"
        android:text="CheckBox"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblwgd"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="119dp"
        android:layout_height="54dp"
        android:layout_marginEnd="44dp"
        android:text="CheckBox"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblW"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="121dp"
        android:layout_height="53dp"
        android:layout_marginEnd="48dp"
        android:text="CheckBox"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblBody"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:layout_marginEnd="48dp"
        android:text="CheckBox"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblWho"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="109dp"
        android:layout_height="49dp"
        android:layout_marginEnd="48dp"
        android:text="CheckBox"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>